<resources>
    <string name="app_name">Student Life Manager</string>
    <string name="please_wait">Please Wait</string>

    //register
    <string name="hint_user_name">Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_sign_up">REGISTER</string>
    <string name="alert_email">Enter email address!</string>
    <string name="alert_password">Enter password!</string>
    <string name="alert_pwd_length">Password too short, enter minimum 6 characters!</string>
    <string name="alert_auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="ur_name">name</string>
    <string name="if_account_sign_in">Already registered. Login Me!</string>
    <string name="reg_prob">Problem in Registration !</string>
    <string name="sdlf">SDLF</string>
    <string name="my_expense">My expense</string>

    //help
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    //home
    <string name="banner_ad_unit_id">ca-app-pub-7691185415864915/2323997981</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_my_task">My Task</string>
    <string name="lbl_my_browser">My Browser</string>
    <string name="lbl_my_expense">My Expense</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- BrowserFragment -->
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="title_expense">Expense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MyExpenseFragment -->


</resources>
