<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_logo_sdlm" />


            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_user_name"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignEnd="@+id/ed_name"
                android:layout_alignRight="@+id/ed_name"
                android:layout_below="@+id/ed_name"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@color/colorPrimaryDark" />

            <Button

                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignEnd="@+id/ed_password"
                android:layout_alignLeft="@+id/ed_password"
                android:layout_alignRight="@+id/ed_password"
                android:layout_alignStart="@+id/ed_password"
                android:layout_below="@+id/ed_password"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_sign_up"
                android:text="@string/lbl_sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/lbl_skip"
                android:textColor="@color/colorPrimaryDark" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
